add test to newsFilter viewmodel