@@ -34,6 +34,7 @@ android {
 }
 
 tasks.withType<Test> {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     useJUnitPlatform()
 }
 
@@ -69,5 +70,12 @@ dependencies {
 
     testImplementation(libs.junit.jupiter)
     testImplementation(kotlin("test"))
+
+    testImplementation(libs.mockk)
+    testImplementation(libs.mockk.android)
+
+    testRuntimeOnly(libs.junit.jupiter.engine)
+
+    testImplementation(libs.kotlinx.coroutines.test)
 
 }
